err/py-cord.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_cord-0.3.4a0.egg-info'...
Listing './lib/python3.5/site-packages/pycord'...
Listing './lib/python3.5/site-packages/pycord/api'...
Compiling './lib/python3.5/site-packages/pycord/api/gateway.py'...
***   File "./lib/python3.5/site-packages/pycord/api/gateway.py", line 190
    handle = f'handle_{event.lower()}'
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycord/api/http.py'...
***   File "./lib/python3.5/site-packages/pycord/api/http.py", line 108
    bucket = f"{method}.{endpoint}"
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycord/client.py'...
***   File "./lib/python3.5/site-packages/pycord/client.py", line 132
    raise RuntimeWarning(f'Callback is not a coroutine!')
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycord/models'...
Compiling './lib/python3.5/site-packages/pycord/models/role.py'...
***   File "./lib/python3.5/site-packages/pycord/models/role.py", line 57
    return f'<&{self.id}>'
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycord/models/user.py'...
***   File "./lib/python3.5/site-packages/pycord/models/user.py", line 58
    return f'<@{self.id}>'
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycord/utils'...
Compiling './lib/python3.5/site-packages/pycord/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/pycord/utils/__init__.py", line 61
    HTTP_ENDPOINT = f"{HOST}/api/v7"
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycord/utils/collection.py'...
***   File "./lib/python3.5/site-packages/pycord/utils/collection.py", line 70
    raise ValueError(f"{value} is not instance of {self.instance}")
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycord/utils/emitter.py'...
***   File "./lib/python3.5/site-packages/pycord/utils/emitter.py", line 41
    raise RuntimeWarning(f'Callback is not a coroutine!')
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
